[ADD] error code when get remote
